@@ -180,6 +180,10 @@ CB_CONFIG_BOOLEAN (cb_device_mnemonics, "device-mnemonics",
 CB_CONFIG_SUPPORT (cb_comment_paragraphs, "comment-paragraphs",
 	_("comment paragraphs in IDENTIFICATION DIVISION (AUTHOR, DATE-WRITTEN, ...)"))
 
+
+CB_CONFIG_SUPPORT (cb_control_division, "control-division",
+	_("CONTROL DIVISION"))
+
 CB_CONFIG_SUPPORT (cb_partial_replacing_with_literal,
 		   "partial-replacing-with-literal",
 		   _("partial replacing with literal"))
