@@ -194,6 +194,7 @@ dpc-in-data:			xml # verify
 alter-statement:			obsolete
 comment-paragraphs:			obsolete # not verified yet
 partial-replacing-with-literal:		ok
+control-division:			unconformable
 call-overflow:				ok
 data-records-clause:			obsolete # not verified yet
 debugging-mode:				ok
