@@ -191,6 +191,7 @@ dpc-in-data:			xml
 
 alter-statement:			obsolete
 comment-paragraphs:			unconformable
+control-division:			unconformable # not verified yet
 partial-replacing-with-literal:		unconformable # not verified yet
 call-overflow:				ok
 data-records-clause:			obsolete
