@@ -190,6 +190,7 @@ dpc-in-data:			xml
 
 alter-statement:			unconformable
 comment-paragraphs:			unconformable
+control-division:			unconformable
 partial-replacing-with-literal:		unconformable
 call-overflow:				archaic
 data-records-clause:			unconformable
