@@ -209,6 +209,7 @@ dpc-in-data:			xml
 
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
+control-division:			unconformable
 partial-replacing-with-literal:		obsolete
 call-overflow:				archaic
 data-records-clause:			obsolete
