@@ -189,6 +189,7 @@ dpc-in-data:			xml
 
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
+control-division:			ok
 partial-replacing-with-literal:		ok
 call-overflow:				archaic
 data-records-clause:			obsolete
