@@ -192,6 +192,7 @@ dpc-in-data:			xml
 
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
+control-division:			unconformable
 partial-replacing-with-literal:		unconformable
 call-overflow:				ok
 data-records-clause:			obsolete
