@@ -190,6 +190,7 @@ dpc-in-data:			xml
 alter-statement:			obsolete
 comment-paragraphs:			obsolete
 partial-replacing-with-literal:		unconformable
+control-division:			unconformable
 call-overflow:				ok  # not verified yet
 data-records-clause:			obsolete
 debugging-mode:				ok
