@@ -193,6 +193,7 @@ dpc-in-data:			xml
 
 alter-statement:			obsolete
 comment-paragraphs:			ok
+control-division:			unconformable # not verified yet
 partial-replacing-with-literal:		unconformable # not verified yet
 call-overflow:				ok
 data-records-clause:			ignore
