@@ -209,6 +209,7 @@ dpc-in-data:			xml
 alter-statement:			warning		# should not be used ...
 comment-paragraphs:			warning		# should not be used ...
 partial-replacing-with-literal:		unconformable
+control-division:			unconformable
 call-overflow:				ok
 data-records-clause:			warning		# should not be used ...
 debugging-mode:				ok
