@@ -455,6 +455,7 @@ test.conf: missing definitions:
 	no definition of 'implicit-assign-dynamic-var'
 	no definition of 'device-mnemonics'
 	no definition of 'comment-paragraphs'
+	no definition of 'control-division'
 	no definition of 'partial-replacing-with-literal'
 	no definition of 'memory-size-clause'
 	no definition of 'multiple-file-tape-clause'
